# pm-1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: AGENTS.md  main.py
backend/tests/: test_health.py
frontend/: AGENTS.md
scripts/: README.md  start-linux.sh  start-macos.sh  start-windows.bat  stop-linux.sh  stop-macos.sh  stop-windows.bat
